--- a/kapitel_01.tex
+++ b/kapitel_01.tex
@@ -4,6 +4,17 @@
 \addbibresource{sources_01.bib}
 \begin{document}
 
+\setbeamertemplate{footline}[first]
+
+\begin{frame}[noframenumbering]
+    \titlepage
+    \begin{textblock}{10}(4.75,15)
+        \cite{logo}
+    \end{textblock}
+\end{frame}
+
+\setbeamertemplate{footline}[presentationbody] 
+
 \begin{frame}[allowframebreaks]{Quellenangaben}
     \printbibliography
 \end{frame}
