--- a/kapitel_01.tex
+++ b/kapitel_01.tex
@@ -15,6 +15,23 @@
 
 \setbeamertemplate{footline}[presentationbody] 
 
+\begin{frame}[Vorstellung]
+	\begin{itemize}
+		\item Kontakt:
+		\begin{itemize}
+			\item Piotr.Dabrowski@htw-berlin.de
+			\item Sprechstunde: Montag 10-11, WH C 614
+		\end{itemize}
+		\item Background
+		\begin{itemize}
+			\item Medizinischer Biotechnologe, dann Bioinformatiker
+			\item Analyse von Next Generation Sequencing-Daten
+			\item Aufbau der Bioinformatik Core-Facility am Robert Koch-Institut
+			\itme Potentielles Wiedersehen: Gesundheitsinformatik
+		\end{itemize}
+	\end{itemize}
+\end{frame}
+
 \begin{frame}[allowframebreaks]{Quellenangaben}
     \printbibliography
 \end{frame}
