--- a/kapitel_01.tex
+++ b/kapitel_01.tex
@@ -15,7 +15,7 @@
 
 \setbeamertemplate{footline}[presentationbody] 
 
-\begin{frame}[Vorstellung]
+\begin{frame}{Vorstellung}
 	\begin{itemize}
 		\item Kontakt:
 		\begin{itemize}
@@ -24,11 +24,33 @@
 		\end{itemize}
 		\item Background
 		\begin{itemize}
-			\item Medizinischer Biotechnologe, dann Bioinformatiker
+			\item Medizinische Biotechnologie + Informatik, dann Bioinformatik
 			\item Analyse von Next Generation Sequencing-Daten
 			\item Aufbau der Bioinformatik Core-Facility am Robert Koch-Institut
-			\itme Potentielles Wiedersehen: Gesundheitsinformatik
+			\item Potentielles Wiedersehen: Gesundheitsinformatik
 		\end{itemize}
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Programmierung}
+	Programmierung: Computern erklären, was sie tun sollen. \\Zu beachten: Computer
+	\begin{itemize}
+		\item sind sehr schnell
+		\item nehmen alles wörtlich
+		\item denken nicht mit
+	\end{itemize}
+	Aufgabe der Programmierer: Komplexe Problemlösungen so in kleine Schritte aufbrechen, dass ein Computer sie durchführen kann = Algorithmen schreiben.\\
+	Dazu notwendig:
+	\begin{itemize}
+		\item Die richtige Art, zu denken
+		\item Viel Übung - Können ist hier wichtiger als Wissen!
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Beispiel}
+	Sagen Sie mir, wie ich die Tür öffnen kann!\\Ich verstehe:
+	\begin{itemize}
+		\item Drehen nach <links, rechts> um <Grad>
 	\end{itemize}
 \end{frame}
 
