--- a/kapitel_01.tex
+++ b/kapitel_01.tex
@@ -50,7 +50,19 @@
 \begin{frame}{Beispiel}
 	Sagen Sie mir, wie ich die Tür öffnen kann!\\Ich verstehe:
 	\begin{itemize}
-		\item Drehen nach <links, rechts> um <Grad>
+		\item Drehen nach <links, rechts> um <wieviel> Grad
+		\item Gehen nach <vorne, hinten> um <wieviel> Schritt
+		\item Arm auf der <rechten, linken> Seite um <wieviel> Grad <heben, senken>
+		\item Greifen mit der <rechten, linken> Hand
+		\item Loslassen mit der <rechten, linken> Hand
+	\end{itemize}
+	Jeder, der den Ball hat, sagt eine Anweisung\\Freiwillige Hilfe: Algorithmus aufschreiben.
+\end{frame}
+
+\begin{frame}{Beispiel weiter}
+	\begin{itemize}
+		\item Funktioniert das nochmal (-> Startbedingungen oder Berechnungen)
+		\item Für Berechnungen: Werte -> Variablen -> Datentypen etc.
 	\end{itemize}
 \end{frame}
 
