--- a/kapitel_01.tex
+++ b/kapitel_01.tex
@@ -27,7 +27,9 @@
 			\item Medizinische Biotechnologie + Informatik, dann Bioinformatik
 			\item Analyse von Next Generation Sequencing-Daten
 			\item Aufbau der Bioinformatik Core-Facility am Robert Koch-Institut
+			\item Exkurse in BMF, BMI $\rightarrow$ Projekte bei Interesse möglich
 			\item Potentielles Wiedersehen: Gesundheitsinformatik
+			\item Seit WS 2019/2020 an der HTW, seit SS 2020 Programmierung 1
 		\end{itemize}
 	\end{itemize}
 \end{frame}
@@ -39,11 +41,11 @@
 		\item nehmen alles wörtlich
 		\item denken nicht mit
 	\end{itemize}
-	Aufgabe der Programmierer: Komplexe Problemlösungen so in kleine Schritte aufbrechen, dass ein Computer sie durchführen kann = Algorithmen schreiben.\\
+	Aufgabe der Programmierer: Komplexe Problemlösungen so in kleine Schritte aufbrechen, dass ein Computer sie durchführen kann = \textbf{Algorithmen} schreiben.\\
 	Dazu notwendig:
 	\begin{itemize}
 		\item Die richtige Art, zu denken
-		\item Viel Übung - Können ist hier wichtiger als Wissen!
+		\item Viel Übung - Können ist hier wichtiger als Wissen! $\rightarrow$ Vorlesungsaufbau
 	\end{itemize}
 \end{frame}
 
@@ -58,6 +60,18 @@
 	\end{itemize}
 	Jeder, der den Ball hat, sagt eine Anweisung\\Freiwillige Hilfe: Algorithmus aufschreiben.
 \end{frame}
+
+\begin{frame}{Von Lösiungsidee zu Programm}
+	Lästige Schreibweise im Beispiel $\rightarrow$ Konventionen, wie Anweisungen geschrieben werden = \textbf{Syntax}. Beispiel:
+	\begin{itemize}
+		\item ``nach'', ``um'', ``Grad'' etc. weglassen: ``Drehen nach links um 10 Grad'' $\rightarrow$ ``Drehen links 10''
+		\item Zur Lesbarkeit ein paar Trennzeichen einführen: ``Drehen links 10'' $\rightarrow$ ``Drehen(links, 10)''
+		\item Klar machen, wann ein Befehl beendet ist und der nächste anfängt: ``Drehen(links, 10)'' $\rightarrow$ ``Drehen(links, 10);''
+	\end{itemize}
+	$\rightarrow$ Übersetzung des Algorithmus in Programmcode\\
+	...funktioniert unser Programm nochmal?
+\end{frame}
+
 
 \begin{frame}{Beispiel weiter}
 	\begin{itemize}
