--- a/kapitel_01.tex
+++ b/kapitel_01.tex
@@ -45,7 +45,7 @@
 	Dazu notwendig:
 	\begin{itemize}
 		\item Die richtige Art, zu denken
-		\item Viel Übung - Können ist hier wichtiger als Wissen! $\rightarrow$ Vorlesungsaufbau
+		\item Viel Übung - Können ist hier wichtiger als Wissen! $\rightarrow$ Vorlesungsaufbau (...braucht man die Vorlesung überhaupt?)
 	\end{itemize}
 \end{frame}
 
@@ -68,10 +68,33 @@
 		\item Zur Lesbarkeit ein paar Trennzeichen einführen: ``Drehen links 10'' $\rightarrow$ ``Drehen(links, 10)''
 		\item Klar machen, wann ein Befehl beendet ist und der nächste anfängt: ``Drehen(links, 10)'' $\rightarrow$ ``Drehen(links, 10);''
 	\end{itemize}
-	$\rightarrow$ Übersetzung des Algorithmus in Programmcode\\
-	...funktioniert unser Programm nochmal?
+	$\rightarrow$ Übersetzung des Algorithmus in Programmcode
+	\\Vokabular zum einfacheren Unterhalten: \textbf{Funktionen} und \textbf{Argumente}
 \end{frame}
 
+\begin{frame}{Für wen machen wir das?}
+	Computer verstehen aber kein ``Drehen'' etc., sondern im Grunde nur:
+	\begin{itemize}
+		\item AusSpeicherHolen(vonAdresse, inRegister)
+		\item Addieren(vonRegister, zuRegister, ergebnisRegister)
+		\item Substrahieren(register, vonRegister, ergebnisRegister)
+		\item InSpeicherSchreiben(nachAdresse, vonRegister)
+		\item SpringeWennRegisterNull(register, sprungWeite)
+	\end{itemize}
+	Das reicht aber (siehe Computeraufbau)! Beispiele:
+	\begin{itemize}
+		\item Zwei Zahlen multiplizieren
+		\item Bild auf Bildschirm anzeigen
+	\end{itemize}
+	...aber will man so programmieren?
+\end{frame}
+
+\begin{frame}{Zahlen multiplizieren}
+\end{frame}
+
+\begin{frame}{Kontrollstrukturen}
+	Frage: Reichen Funktionen und Argumente, um jedes Problem zu lösen? Falls nein, was fehlt?
+\end{frame}
 
 \begin{frame}{Beispiel weiter}
 	\begin{itemize}
