--- a/header.tex
+++ b/header.tex
@@ -2,6 +2,8 @@
 \usepackage[T1]{fontenc}
 \usepackage[export]{adjustbox}
 \usepackage{amssymb}
+\usepackage{listings}
+\lstloadlanguages{[x86masm]Assembler}
 
 
 \title{Programmierung 1}
