--- a/kapitel_01.tex
+++ b/kapitel_01.tex
@@ -46,8 +46,50 @@
 		\begin{itemize}
 			\item Gruppe A: Frau Ursula Rehbein, Zug 1: Ich
 			\item Betreutes Programmieren: Umsetzen des Vorlesungsstoffes
-			\item Hausaufgaben
+			\item Hausaufgaben (Voraussetzung für Prüfungszulassung!)
+			\item Musterlösungen für ausgewählte Hausaufgaben
 		\end{itemize}
+	\end{itemize}
+	Gesamtaufwand: 6 Credits = 180 Stunden\\
+	Bei 16 Wochen je 3 Stunden UE + VL sind das 8 Stunden Selbststudium/Woche!
+\end{frame}
+
+\begin{frame}{Hausaufgaben}
+	\begin{itemize}
+		\item Meistens alle 2 Wochen
+		\item Zu Hause zu lösen
+		\item Elektronisch über https://moodle.htw-berlin.de abzugeben
+		\begin{itemize}
+			\item Jeden Abgabetermin beachten! Abgabe mehr als 15 Minuten später = 0 Punkte!
+			\item Identische Lösungen (auch teilweise) = 0 Punkte!
+			\item Gruppenarbeit: Informationen in der Übung
+		\end{itemize}
+		\item Für Klausurzulassung: Mindestens 75\% der Hausaufgaben-Punkte (Prüfungsvorleistung)
+		\item Punkte für Hausaufgaben nicht zwischen Semestern übertragbar
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Prüfung}
+	Notwendig für die Teilnahme:
+	\begin{itemize}
+		\item Mindestens 75\% der Hausaufgaben-Punkte
+		\item 6. Kyu auf https://www.codewars.com (Modalitäten: nächste Woche)
+		\item Anmeldung im LSF (https://lsf.htw-berlin.de) im vorgegebenen Zeitraum
+		\item Personalausweis oder Reisepass zur Vorlage bei der Prüfung
+	\end{itemize}
+	Es wird eine elektronische Klausur am Rechner geschrieben: Nur Programmieraufgaben (100\% der Note)!\\
+	Vorsicht: Andere machen das anders!
+\end{frame}
+
+\begin{frame}{Laborordnung}
+	Laborordnung im Internet: https://www.youtube.com/watch?v=edR-4BHWWZo\\
+	Ausgewählte Punkte:
+	\begin{itemize}
+		\item Keine private/kommerzielle Nutzung (massiv ausgebucht!)
+		\item Kein Umsöpseln, keine eigenständige Software-Installation
+		\item Kein Essen, Trinken, Rauchen
+		\item Dateien zusätzlich sichern, keine Garantie für Dateien auf Labor-PCs/Dateiserver
+		\item Arbeit außerhalb der regulären Öffnungszeiten: Schlüssel im Servicepoint im Gebäude B
 	\end{itemize}
 \end{frame}
 
