--- a/kapitel_01.tex
+++ b/kapitel_01.tex
@@ -93,6 +93,10 @@
 	\end{itemize}
 \end{frame}
 
+\begin{frame}{Ablauf - allgemein und heute}
+	\includegraphics[height=0.7\textheight]{Bilder/VL-Bild.jpg} Heute: Ab- und auftauchen
+\end{frame}
+
 \begin{frame}{Programmierung}
 	Programmierung: Computern erklären, was sie tun sollen. \\Zu beachten: Computer
 	\begin{itemize}
@@ -186,11 +190,17 @@ jnz %Register3 $-2
 mov %Register2 (3)
 	\end{lstlisting}
 	...Wie gebe ich den Wert aus? (das wird mit nur 3 Befehlen eklig $\rightarrow$ jne)\\
+	...Wie sieht das tatsächlich im Rechner aus? $\rightarrow$ Maschinensprache
 	...Wie baue ich ``Drehen(Richtung, Winkel)'' damit?
 \end{frame}
 
 \begin{frame}{Programmiersprachen}
 	Man kann mit Assembler programmieren... Aber will man es?
+	\\Programmiersprachen:
+	\begin{itemize}
+		\item Abstrahieren Hardware-Details auf das nötige Level
+		\item 
+	\end{itemize}
 \end{frame}
 
 \begin{frame}{Kontrollstrukturen}
