--- a/header.tex
+++ b/header.tex
@@ -8,8 +8,8 @@
 
 \title{Programmierung 1}
 \date{SS 2020}
-\author[PWD]{Prof. Dr.-Ing. Piotr Wojciech Dabrowski}
-\titlegraphic{Bilder/logo.png}
+\author[PWD]{Prof. Dr.-Ing. P. W. Dabrowski}
+\titlegraphic{Bilder/logo_43.png}
 
-\usepackage{HTWBeamerTemplate/beamerthemeHTW}
+\usepackage{HTWBeamerTemplate/beamerthemeHTW_43}
 %\setbeameroption{show notes on second screen}
