--- a/kapitel_01.tex
+++ b/kapitel_01.tex
@@ -1,4 +1,4 @@
-\documentclass[aspectratio=169,t]{beamer}
+\documentclass[t]{beamer}
 \include{header}
 \subtitle{1: Allgemeines}
 \addbibresource{sources_01.bib}
@@ -8,8 +8,8 @@
 
 \begin{frame}[noframenumbering]
     \titlepage
-    \begin{textblock}{10}(4.75,15)
-        \cite{logo}
+    \begin{textblock}{10}(6,16.6)
+	    \textcolor{white}{\cite{logo}}
     \end{textblock}
 \end{frame}
 
@@ -94,7 +94,8 @@
 \end{frame}
 
 \begin{frame}{Ablauf - allgemein und heute}
-	\includegraphics[height=0.7\textheight]{Bilder/VL-Bild.jpg} Heute: Ab- und auftauchen
+	%\includegraphics[height=0.7\textheight]{Bilder/VL-Bild.jpg} 
+	\only<2->{Heute: Ab- und auftauchen}
 \end{frame}
 
 \begin{frame}{Programmierung}
